<resources>
    <string name="app_name">MyTrainingsApp</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="enter_your_email">Enter Your Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="schedule_training">Schedule Training</string>
    <string name="send_request">Send Request</string>
    <string name="request_denied">Request Denied</string>
    <string name="pending_request">Pending Request</string>
    <string name="ask_membership">Ask Membership</string>

    <string name="my_profile">My Profile</string>
    <string name="sign_out">Sign Out</string>
    <string name="please_enter_email">Please enter email</string>
    <string name="please_enter_pass">Please enter password</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="take_a_photo">Take a photo</string>
    <string name="add_from_gallery">Add from gallery</string>
    <string name="opening_hours">Opening Hours</string>
    <string name="from">from</string>
    <string name="to">to</string>
    <string name="sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="seven_am">7:00</string>
    <string name="eight_am">8:00</string>
    <string name="nine_am">9:00</string>
    <string name="ten_am">10:00</string>
    <string name="eleven_am">11:00</string>
    <string name="twelve_pm">12:00</string>
    <string name="one_pm">13:00</string>
    <string name="two_pm">14:00</string>
    <string name="three_pm">15:00</string>
    <string name="four_pm">16:00</string>
    <string name="five_pm">17:00</string>
    <string name="six_pm">18:00</string>
    <string name="seven_pm">19:00</string>
    <string name="eight_pm">20:00</string>
    <string name="nine_pm">21:00</string>
    <string name="ten_pm">22:00</string>
    <string name="save">Save</string>
    <string name="client">Client</string>
    <string name="personal_trainer">Personal Trainer</string>
    <string name="company_name">Company Name</string>
    <string name="full_name">Full Name</string>
    <string name="location">Location</string>
    <string name="create_profile_invalid_message">Some fields are missing</string>
    <string name="distance_not_available">Distance not availiable</string>
    <string name="approved">Approved!</string>
    <string name="denied">Denied</string>
    <string name="pending">Pending</string>
    <string name="my_pending_request">My Pending Requests</string>
    <string name="my_personal_trainers">My Personal Trainers</string>
    <string name="my_clients">My Clients</string>
    <string name="my_trainings">My Trainings</string>
    <string name="find_personal_trainers">Find Personal Trainers</string>
    <string name="approve">Approve</string>
    <string name="deny">Deny</string>
    <string name="please_wait">Please wait...</string>
    <string name="training_scheduled_successfully">Training scheduled successfully</string>
    <string name="please_grant_notification_permission_from_app_settings">Please grant Notification permission from App Settings</string>

</resources>