<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="vertical"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:paddingBottom="16dp">

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/clientRB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="?colorPrimary"
                    android:textStyle="bold"
                    android:text="@string/client" />

                <RadioButton
                    android:id="@+id/personalTrainerRB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="?colorPrimary"
                    android:textStyle="bold"
                    android:text="@string/personal_trainer" />

            </RadioGroup>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:hint="@string/full_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/fullNameET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/black_border"
                    android:inputType="textEmailAddress"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/companyContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:hint="@string/company_name"
                android:visibility="gone">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/companyET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:background="@drawable/black_border"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imageView"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_marginTop="16dp"
                android:scaleType="fitXY"
                android:background="@drawable/black_border" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:orientation="horizontal">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/takePhoto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/take_a_photo"
                    android:textColor="?colorPrimary"
                    app:backgroundTint="@android:color/transparent"
                    app:strokeColor="?colorPrimary"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    app:strokeWidth="2dp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/addFromGallery"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/add_from_gallery"
                    android:textColor="?colorPrimary"
                    app:backgroundTint="@android:color/transparent"
                    app:strokeColor="?colorPrimary"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    app:strokeWidth="2dp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/openingHoursContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/opening_hours"
                    android:textColor="?colorPrimary"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <com.example.zivsfitnessapp.customviews.DayOpeningHoursView
                    android:id="@+id/sunday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp" />

                <com.example.zivsfitnessapp.customviews.DayOpeningHoursView
                    android:id="@+id/monday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp" />

                <com.example.zivsfitnessapp.customviews.DayOpeningHoursView
                    android:id="@+id/tuesday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp" />

                <com.example.zivsfitnessapp.customviews.DayOpeningHoursView
                    android:id="@+id/wednesday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp" />

                <com.example.zivsfitnessapp.customviews.DayOpeningHoursView
                    android:id="@+id/thursday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp" />

                <com.example.zivsfitnessapp.customviews.DayOpeningHoursView
                    android:id="@+id/friday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp" />

            </LinearLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/locationContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:focusable="false"
                android:hint="@string/location">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/locationET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/black_border"
                    android:focusable="false"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:text="@string/save" />

        </LinearLayout>

    </ScrollView>

   <com.example.zivsfitnessapp.customviews.LoadingView
       android:id="@+id/loading"
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:visibility="gone" />

</FrameLayout>