<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:id="@+id/content"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginBottom="16dp"
        android:src="@drawable/baseline_supervisor_account_24" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/company_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:textColor="?colorPrimary"
        android:textSize="22dp"
        android:textStyle="bold"
        tools:text="Company Name" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:textColor="?colorPrimary"
        android:textSize="18dp"
        tools:text="Full Name" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/schedule_training"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:text="@string/schedule_training"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:textColor="?colorPrimary"
        app:strokeColor="?colorPrimary"
        app:strokeWidth="2dp"
        app:backgroundTint="@android:color/transparent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/my_trainings"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:text="@string/my_trainings"
        android:textColor="?colorPrimary"
        app:strokeColor="?colorPrimary"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        app:backgroundTint="@android:color/transparent"
        app:strokeWidth="2dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/pending_requests"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:text="@string/my_pending_request"
        android:textColor="?colorPrimary"
        app:strokeColor="?colorPrimary"
        app:backgroundTint="@android:color/transparent"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        app:strokeWidth="2dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/members_ship"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:textColor="?colorPrimary"
        app:strokeColor="?colorPrimary"
        app:backgroundTint="@android:color/transparent"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        app:strokeWidth="2dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/sign_out"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:text="@string/sign_out"
        android:textColor="?colorPrimary"
        app:strokeColor="?colorPrimary"
        app:backgroundTint="@android:color/transparent"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        app:strokeWidth="2dp" />


</androidx.appcompat.widget.LinearLayoutCompat>